--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,15 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/mdbootstrap/css/bootstrap.css",
+              "node_modules/mdbootstrap/css/mdb.css",
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/mdbootstrap/js/jquery-3.3.1.min.js",
+              "node_modules/mdbootstrap/js/bootstrap.js",
+              "node_modules/mdbootstrap/js/mdb.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
